# gwc

./: COPYING  Changelog  INSTALL  Makefile.am  Makefile.fix  Makefile.in  Makefile.pa  README  TODO  aclocal.m4  aclocal.m4.bak  amplify.c  ar.c  ar.h  audio_alsa.c  audio_alsa.c.bak  audio_device.c  audio_device.h  audio_edit.c  audio_edit.h  audio_oss.c  audio_osx.c  audio_pa.c  audio_util.c  biquad.c  biquad.h  cdrdao.toc  cdrdaop.toc  changes  chbevl.c  configure  configure.in  configure.scan  crackle.c  declick.c  declick.c.new  decrackle.c  denoise.c  dethunk.c  dialog.c  (+47 more)
contrib/: gwc-0.20-1.spec  gwc.spec
data/applications/: gtk-wave-cleaner.desktop
doc/: gnome-wave-cleaner.html  gtk-wave-cleaner.html  gtkrc-example.txt  gwc.html  gwc_qs.html
icons/: amplify.xcf  amplify.xpm  amplify_dark.xpm  cut.gfig  cut.xcf  cut.xpm  declick.xcf  declick.xpm  declick1.xpm  declick2.xpm  declick3.xpm  declick4.xpm  declick5.xpm  declick6.xpm  declick_dark.xpm  declick_m.xcf  declick_m.xpm  declick_m_dark.xpm  declick_w.xcf  declick_w.xpm  declick_w_dark.xpm  decrackle.xcf  decrackle.xpm  decrackle_dark.xpm  estimate.xpm  estimate_dark.xpm  filter.xpm  filter_dark.xpm  gnome-wave-cleaner.xpm  gtk-wave-cleaner.xpm  noise_sample.xpm  noise_sample_dark.xpm  pinknoise.xpm  pinknoise_dark.xpm  remove_noise.xpm  remove_noise_dark.xpm  select_all.xpm  select_all_dark.xpm  silence.xpm  silence_dark.xpm  (+19 more)
icons/CVS/: Entries  Repository  Root
meschach/: configure  configure.in  dmacheps.c  err.h  fmacheps.c  macheps  makefile  makefile.in  matrix.h  maxint  maxint.c  tags
meschach/autom4te.cache/: output.0  requests  traces.0
osx_packaging/: packaging commands
osx_packaging/Gtk Wave Cleaner.app/Contents/: Info.plist
osx_packaging/Gtk Wave Cleaner.app/Contents/MacOS/: gtk-wave-cleaner  gtk-wave-cleaner.sh
osx_packaging/Gtk Wave Cleaner.app/Contents/Resources/: AppIcon.icns
osx_packaging/Gtk Wave Cleaner.app/Contents/Resources/etc/gtk-2.0/: gtkrc
osx_packaging/Gtk-Wave-Cleaner.app/Contents/: Info.plist
osx_packaging/Gtk\ Wave\ Cleaner.app/Contents/Resources/lib/gdk-pixbuf-2.0/: loaders.cache
